# DAN-TF

./: CMakeLists.txt  ZFutil.cpp  file.cpp  main.cpp  meanImg.txt  stdDevImg.txt
Model_pb/: frozen_model.pb
facedetect/include/: detectFace.h  imiCV.h
include/: ZFutil.h  aa.h
opencv/lib/: libopencv_calib3d.so.2.4.13  libopencv_contrib.so.2.4.13  libopencv_core.so.2.4.13  libopencv_features2d.so.2.4.13  libopencv_flann.so.2.4.13  libopencv_gpu.so.2.4.13  libopencv_highgui.so.2.4.13  libopencv_legacy.so.2.4.13  libopencv_ml.so.2.4.13  libopencv_nonfree.so.2.4.13  libopencv_objdetect.so.2.4.13  libopencv_ocl.so.2.4.13  libopencv_photo.so.2.4.13  libopencv_stitching.so.2.4.13  libopencv_superres.so.2.4.13  libopencv_video.so.2.4.13  libopencv_videostab.so.2.4.13
opencv/lib/pkgconfig/: opencv.pc
opencv/share/OpenCV/: OpenCVModules.cmake
protobuf/java/: pom.xml
protobuf/java/util/: pom.xml
protobuf/js/: package.json
tensorflow-1.7.0/genfiles/tensorflow/cc/ops/: array_ops.cc  array_ops.h  linalg_ops.h  math_ops.cc  parsing_ops.cc  state_ops.h  string_ops.cc
tensorflow-1.7.0/genfiles/tensorflow/core/example/: example.pb.cc  example_parser_configuration.pb.cc  feature.pb.cc
tensorflow-1.7.0/genfiles/tensorflow/core/framework/: function.pb.cc
tensorflow-1.7.0/genfiles/tensorflow/core/grappler/costs/: op_performance_data.pb.cc
tensorflow-1.7.0/genfiles/tensorflow/core/profiler/: profile.pb.cc  tfprof_log.pb.cc  tfprof_options.pb.cc  tfprof_output.pb.cc
tensorflow-1.7.0/genfiles/tensorflow/core/protobuf/: control_flow.pb.cc  rewriter_config.pb.cc  rewriter_config.pb_text.cc
tensorflow-1.7.0/genfiles/tensorflow/core/util/: event.pb.cc  event.pb_text.cc  version_info.cc
update1/: ZFutil.cpp  initlandmarks_0.txt  main.cpp
update1/include/: ZFutil.h
